@@ -3,6 +3,7 @@ Revision history for MooseX-AttributeShortcuts
 {{$NEXT}}
 	* Redo a number of tests, to improve coverage and deal with the IMPENDING
 	  DOOM of . in @INC
+	* Add a "history" note referencing lazy_build
 
 0.028     2015-04-07 20:45:00 PDT-0700
 	* 0.028.  *le sigh*
